[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Abinav Ramesh Sundararaman", email = "abinavrameshs@gmail.com"},
]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "ipykernel>=6.21.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
